--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,8 @@
 services:
   monitor:
     build: .
+    volumes:
+      - ./config.json:/app/config.json
     ports:
       - "5300:5300"
     restart: unless-stopped
